fixed about me spacing

--- a/src/mobile/home/about-me-mob/AboutMeMob.scss
+++ b/src/mobile/home/about-me-mob/AboutMeMob.scss
@@ -1,6 +1,6 @@
 .about-wrapper-mob {
   padding: 3em 3em;
-  height: 100em;
+  height: 105em;
   width: 100%;
   display: flex;
   flex-direction: column;
